--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "podinstall": "cd ios && pod install && cd ..",
+    "podinstall": "node podinstall.js",
     "postinstall": "npx jetify && npm run podinstall && npm run prepackage",
     "prepackage": "node pre-packager.js"
   },
