--- a/ios/cpm.xcodeproj/xcshareddata/xcschemes/cpm.xcscheme
+++ b/ios/cpm.xcodeproj/xcshareddata/xcschemes/cpm.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "cpm.app"
+               BuildableName = "IoTCentral CPM.app"
                BlueprintName = "cpm"
                ReferencedContainer = "container:cpm.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "cpm.app"
+            BuildableName = "IoTCentral CPM.app"
             BlueprintName = "cpm"
             ReferencedContainer = "container:cpm.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "cpm.app"
+            BuildableName = "IoTCentral CPM.app"
             BlueprintName = "cpm"
             ReferencedContainer = "container:cpm.xcodeproj">
          </BuildableReference>
