--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-bottom-tabs": "^5.1.15",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "buffer": "^5.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-azure-iotcentral-client": "^1.1.2",
@@ -47,6 +48,7 @@
     "@types/react-native-charts-wrapper": "^0.5.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@welldone-software/why-did-you-render": "^4.2.5",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
     "fs": "^0.0.1-security",
