--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "node_modules",
     "babel.config.js",
     "metro.config.js",
-    "jest.config.js"
+    "jest.config.js",
+    "creds-generator"
   ]
 }
