--- a/creds-generator/package.json
+++ b/creds-generator/package.json
@@ -2,20 +2,34 @@
   "name": "creds-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "./node_modules/.bin/tsc -w",
-    "build": "./node_modules/.bin/tsc",
+    "watch::client": "./node_modules/.bin/tsc -w -p client/tsconfig.json",
+    "watch::server": "./node_modules/.bin/tsc -w -p server/tsconfig.json",
+    "build::client": "./node_modules/.bin/tsc -p client/tsconfig.json",
+    "build::server": "./node_modules/.bin/tsc -p server/tsconfig.json",
+    "build": "npm run build::client && npm run build::server",
+    "start":"node server/dist/index.js",
+    "prepare": "npm run build",
     "live-server": "./node_modules/.bin/live-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/crypto-js": "^3.1.47",
+    "@types/express": "^4.17.7",
+    "@types/qrcode": "^1.3.4",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "csstype": "^2.6.11",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "typescript": "^3.9.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
+    "qrcode": "^1.4.4"
+  }
 }
