--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "buffer": "^5.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-azure-iotcentral-client": "^1.1.2",
+    "react-native-azure-iotcentral-client": "1.1.2",
     "react-native-ble-plx": "^2.0.0",
     "react-native-camera": "^3.18.0",
     "react-native-charts-wrapper": "^0.5.7",
