--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "rn-apple-healthkit": "^0.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.10.5",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^0.0.7",
     "@types/react": "^16.9.22",
@@ -57,6 +57,9 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.11.0",
     "typescript": "^3.8.2"
+  },
+  "resolutions": {
+    "**/lodash": "^4.17.19"
   },
   "jest": {
     "preset": "react-native",
