--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-svg": "^11.0.1",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "6.6.0",
     "rn-apple-healthkit": "^0.8.0"
   },
   "devDependencies": {
