--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,9 +1,9 @@
-#Wed Jul 22 16:06:41 CEST 2020
+#Thu Jul 23 15:08:10 GMT 2020
 FLIPPER_VERSION=0.33.1
 CPM_BETARELEASE_KEY_PASSWORD=cpm_debug_key
 CPM_BETARELEASE_STORE_PASSWORD=android
 android.enableJetifier=true
-VERSION_NAME=1.1.1
+VERSION_NAME=1.1.2
 android.useAndroidX=true
 CPM_BETARELEASE_KEY_ALIAS=cpm_debug_key
 CPM_BETARELEASE_STORE_FILE=debug.keystore
