--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "buffer": "^5.6.0",
+    "events": "^3.2.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-azure-iotcentral-client": "1.1.2",
