--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "build": "tsc",
     "podinstall": "node podinstall.js",
     "postinstall": "npx jetify && npm run podinstall && npm run prepackage",
     "prepackage": "node pre-packager.js"
@@ -22,13 +23,13 @@
     "events": "^3.2.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-azure-iotcentral-client": "1.1.2",
+    "react-native-azure-iotcentral-client": "^1.1.7",
     "react-native-ble-plx": "^2.0.0",
     "react-native-camera": "^3.18.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
-    "react-native-google-fit": "^0.10.0",
+    "react-native-google-fit": "^0.16.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.6.0",
     "react-native-permissions": "^2.0.9",
@@ -61,7 +62,7 @@
   },
   "resolutions": {
     "**/lodash": "^4.17.19",
-    "**/node-fetch":"^2.6.1"
+    "**/node-fetch": "^2.6.1"
   },
   "jest": {
     "preset": "react-native",
