--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@react-navigation/stack": "^5.2.19",
     "buffer": "^5.6.0",
     "events": "^3.2.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
     "react-native-azure-iotcentral-client": "1.1.7",
     "react-native-ble-plx": "^2.0.0",
     "react-native-camera": "^3.18.0",
     "react-native-charts-wrapper": "^0.5.7",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.4.0",
     "react-native-google-fit": "^0.16.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -42,22 +42,22 @@
     "rn-apple-healthkit": "^0.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^0.0.7",
-    "@types/react": "^16.9.22",
-    "@types/react-native": "^0.61.16",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react": "^16.14.5",
+    "@types/react-native": "^0.61.23",
     "@types/react-native-charts-wrapper": "^0.5.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "@welldone-software/why-did-you-render": "^4.2.5",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
     "fs": "^0.0.1-security",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-test-renderer": "16.11.0",
+    "react-test-renderer": "17.0.1",
     "typescript": "^3.8.2"
   },
   "jest": {
