--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,7 @@ platform :ios, '10.0'
 
 permissions_path = '../node_modules/react-native-permissions/ios'
 pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
+pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
 
 target 'cpm' do
   config = use_native_modules!
