--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,6 +171,10 @@ android {
                 abiFilters "arm64-v8a", "armeabi-v7a"
             }
             matchingFallbacks = ['debug','release']
+            
+            if (System.env.CPM_BETARELEASE_PROJECT_NAME) {
+                archivesBaseName = "${System.env.CPM_BETARELEASE_PROJECT_NAME}"
+            }
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
