--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.7.2",
+    "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/material-bottom-tabs": "^5.1.15",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
@@ -24,8 +24,8 @@
     "react": "^17.0.2",
     "react-native": "^0.65.0-rc.4",
     "react-native-azure-iotcentral-client": "1.1.7",
-    "react-native-ble-plx": "^2.0.0",
-    "react-native-camera": "^3.18.0",
+    "react-native-ble-plx": "^2.0.2",
+    "react-native-camera": "^4.1.1",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.4.0",
@@ -34,7 +34,7 @@
     "react-native-paper": "^3.6.0",
     "react-native-permissions": "^2.0.9",
     "react-native-qrcode-scanner": "^1.3.1",
-    "react-native-reanimated": "^2.0.1",
+    "react-native-reanimated": "^2.3.0-alpha.2",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-svg": "^11.0.1",
