--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "build": "tsc",
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./src",
+    "format": "prettier --write src/",
+    "build": "npm run format && npm run lint && tsc",
     "podinstall": "node podinstall.js",
     "postinstall": "npx jetify && npm run podinstall && npm run prepackage",
     "prepackage": "node pre-packager.js"
@@ -16,9 +17,9 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^6.1.4",
-    "@react-navigation/material-bottom-tabs": "^5.1.15",
-    "@react-navigation/native": "^5.2.4",
-    "@react-navigation/stack": "^5.2.19",
+    "@react-navigation/material-bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
     "buffer": "^5.6.0",
     "events": "^3.2.0",
     "react": "^17.0.2",
@@ -31,11 +32,11 @@
     "react-native-get-random-values": "^1.4.0",
     "react-native-google-fit": "^0.16.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-paper": "^3.6.0",
+    "react-native-paper": "^4.9.2",
     "react-native-permissions": "^2.0.9",
     "react-native-qrcode-scanner": "^1.3.1",
     "react-native-reanimated": "^2.3.0-alpha.2",
-    "react-native-safe-area-context": "^0.7.3",
+    "react-native-safe-area-context": "^3.3.1",
     "react-native-screens": "^2.7.0",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "6.6.0",
@@ -45,21 +46,27 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.0.0",
-    "@types/react": "^17.0.18",
+    "@types/react": "^17.0.19",
     "@types/react-native": "^0.64.13",
     "@types/react-native-charts-wrapper": "^0.5.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "@welldone-software/why-did-you-render": "^4.2.5",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fs": "^0.0.1-security",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "^2.3.2",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.2"
+    "typescript": "^4.4.2"
   },
   "jest": {
     "preset": "react-native",
