--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,15 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "strict": true,
+    "noUnusedLocals": true,
     "module": "commonjs",
     "target": "es2017",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src"
   },
   "exclude": [
     "node_modules",
+    "src/sensors/health/**/*.ts*",
     "babel.config.js",
     "metro.config.js",
     "jest.config.js",
