--- a/.azuredevops/main.yml
+++ b/.azuredevops/main.yml
@@ -4,6 +4,7 @@ pool:
   vmImage: 'macos-latest'
 
 variables:
+  - group: iotc-cpm-android
   - name: isMaster
     value: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
   - name: CPM_DEBUG_PROJECT_NAME
@@ -40,5 +41,37 @@ jobs:
         displayName: 'Publish Build Artifact'
         inputs:
           PathtoPublish: 'android/app/build/outputs/apk/debug/$(Project_Name)-debug.apk'
+          ArtifactName: 'android'
+          publishLocation: 'Container'
+
+  - job: Android_Release
+    condition: and(succeeded(), eq(variables.isMaster, true))
+    steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '12.18.4'
+        displayName: 'Install Node'
+
+      - script: npm install
+        workingDirectory: .
+        displayName: 'Install node dependencies'
+
+      - script: npm version prerelease --preid "$(Build.BuildNumber)" --no-git-tag-version
+        workingDirectory: .
+        displayName: 'Increment version in package.json'
+
+      - task: Gradle@2
+        inputs:
+          workingDirectory: 'android'
+          gradleWrapperFile: 'android/gradlew'
+          gradleOptions: '-Xmx3072m'
+          publishJUnitResults: false
+          testResultsFiles: '**/TEST-*.xml'
+          tasks: 'assembleRelease'
+
+      - task: PublishBuildArtifacts@1
+        displayName: 'Publish Build Artifact'
+        inputs:
+          PathtoPublish: 'android/app/build/outputs/apk/debug/$(Project_Name)-release.apk'
           ArtifactName: 'android'
           publishLocation: 'Container'
