--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,12 @@ android {
                 keyAlias CPM_RELEASE_KEY_ALIAS
                 keyPassword CPM_RELEASE_KEY_PASSWORD
             }
+            else if (System.env.CPM_RELEASE_STORE_FILE) {
+                storeFile file(System.env.CPM_RELEASE_STORE_FILE)
+                storePassword System.env.CPM_RELEASE_STORE_PASSWORD
+                keyAlias System.env.CPM_RELEASE_KEY_ALIAS
+                keyPassword System.env.CPM_RELEASE_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
