--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -7,3 +7,8 @@ VERSION_NAME=1.1.5
 android.useAndroidX=true
 CPM_BETARELEASE_KEY_ALIAS=cpm_debug_key
 CPM_BETARELEASE_STORE_FILE=iotc-cpm.keystore
+CPM_RELEASE_KEY_ALIAS=cpm_release_key
+CPM_RELEASE_STORE_FILE=iotc-cpm-release.keystore
+CPM_RELEASE_KEY_PASSWORD=iotc_cpm_release
+CPM_RELEASE_STORE_PASSWORD=iotc_cpm_release
+
