--- a/creds-generator/package.json
+++ b/creds-generator/package.json
@@ -18,18 +18,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/crypto-js": "^3.1.47",
-    "@types/express": "^4.17.7",
-    "@types/qrcode": "^1.3.4",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "csstype": "^2.6.11",
-    "five-server": "0.0.28",
-    "typescript": "^3.9.6"
+    "@types/express": "^4.17.13",
+    "@types/qrcode": "^1.4.2",
+    "@types/react": "^16.14.21",
+    "@types/react-dom": "^16.9.14",
+    "csstype": "^2.6.19",
+    "five-server": "^0.1.3",
+    "typescript": "^3.9.10"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "crypto-js": "^4.0.0",
-    "express": "^4.17.1",
-    "qrcode": "^1.4.4"
+    "body-parser": "^1.19.1",
+    "crypto-js": "^4.1.1",
+    "express": "^4.17.2",
+    "qrcode": "^1.5.0"
   }
 }
