--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,5 +29,6 @@ target 'cpm' do
 
   post_install do |installer|
     react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
