--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "buffer": "^5.6.0",
     "events": "^3.2.0",
     "react": "^17.0.2",
-    "react-native": "^0.65.0-rc.4",
+    "react-native": "^0.67.1",
     "react-native-azure-iotcentral-client": "1.1.7",
     "react-native-ble-plx": "^2.0.2",
     "react-native-camera": "^4.1.1",
     "react-native-charts-wrapper": "^0.5.7",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-get-random-values": "^1.4.0",
     "react-native-google-fit": "^0.16.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -38,8 +38,8 @@
     "react-native-reanimated": "^2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.3.1",
     "react-native-screens": "^2.7.0",
-    "react-native-svg": "^11.0.1",
-    "react-native-vector-icons": "6.6.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "rn-apple-healthkit": "^0.8.0"
   },
   "devDependencies": {
@@ -64,8 +64,8 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.3.2",
     "react-native-codegen": "0.0.7",
-    "react-native-svg-transformer": "^0.14.3",
-    "react-test-renderer": "17.0.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-test-renderer": "17.0.2",
     "typescript": "^4.4.2"
   },
   "jest": {
