--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/material-bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.7",
     "buffer": "^5.6.0",
     "events": "^3.2.0",
@@ -30,14 +30,14 @@
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-get-random-values": "^1.4.0",
-    "react-native-google-fit": "^0.16.1",
+    "react-native-google-fit": "^0.18.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-permissions": "^2.0.9",
     "react-native-qrcode-scanner": "^1.3.1",
-    "react-native-reanimated": "^2.3.0-alpha.2",
-    "react-native-safe-area-context": "^3.3.1",
-    "react-native-screens": "^2.7.0",
+    "react-native-reanimated": "^2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "rn-apple-healthkit": "^0.8.0"
