--- a/.azuredevops/main.yml
+++ b/.azuredevops/main.yml
@@ -11,6 +11,7 @@ variables:
     value: $(Project_Name)
   - name: CPM_RELEASE_PROJECT_NAME
     value: $(Project_Name)
+  - name: CPM_RELEASE_STORE_PASSWORD
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 jobs:
@@ -76,6 +77,9 @@ jobs:
       - bash: env | sort
 
       - task: Gradle@2
+        env: 
+          CPM_RELEASE_STORE_PASSWORD:$[variables.CPM_RELEASE_STORE_PASSWORD]
+          CPM_RELEASE_KEY_PASSWORD:$[variables.CPM_RELEASE_KEY_PASSWORD]
         inputs:
           workingDirectory: 'android'
           gradleWrapperFile: 'android/gradlew'
