--- a/.azuredevops/main.yml
+++ b/.azuredevops/main.yml
@@ -12,6 +12,9 @@ variables:
   - name: CPM_RELEASE_PROJECT_NAME
     value: $(Project_Name)
   - name: CPM_RELEASE_STORE_PASSWORD
+    value: $[variables.CPM_RELEASE_STORE_PASSWORD]
+  - name: CPM_RELEASE_KEY_PASSWORD
+    value: $[variables.CPM_RELEASE_KEY_PASSWORD]
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 jobs:
@@ -78,8 +81,8 @@ jobs:
 
       - task: Gradle@2
         env: 
-          CPM_RELEASE_STORE_PASSWORD:$[variables.CPM_RELEASE_STORE_PASSWORD]
-          CPM_RELEASE_KEY_PASSWORD:$[variables.CPM_RELEASE_KEY_PASSWORD]
+          CPM_RELEASE_STORE_PASSWORD:$(CPM_RELEASE_STORE_PASSWORD)
+          CPM_RELEASE_KEY_PASSWORD:$(CPM_RELEASE_KEY_PASSWORD)
         inputs:
           workingDirectory: 'android'
           gradleWrapperFile: 'android/gradlew'
