--- a/.azuredevops/main.yml
+++ b/.azuredevops/main.yml
@@ -12,9 +12,9 @@ variables:
   - name: CPM_RELEASE_PROJECT_NAME
     value: $(Project_Name)
   - name: CPM_RELEASE_STORE_PASSWORD
-    value: $[variables.CPM_RELEASE_STORE_PASSWORD]
+    value: $(CPM_RELEASE_STORE_PASSWORD)
   - name: CPM_RELEASE_KEY_PASSWORD
-    value: $[variables.CPM_RELEASE_KEY_PASSWORD]
+    value: $(CPM_RELEASE_KEY_PASSWORD)
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 jobs:
