--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -7,3 +7,6 @@ VERSION_NAME=1.1.5
 android.useAndroidX=true
 CPM_BETARELEASE_KEY_ALIAS=cpm_debug_key
 CPM_BETARELEASE_STORE_FILE=iotc-cpm.keystore
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
