--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "react-native-ble-plx": "^2.0.2",
     "react-native-camera": "^4.1.1",
     "react-native-charts-wrapper": "^0.5.7",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-gesture-handler": "^2.3.0",
     "react-native-get-random-values": "^1.4.0",
     "react-native-google-fit": "^0.18.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-permissions": "^2.0.9",
+    "react-native-progress": "^5.0.0",
     "react-native-qrcode-scanner": "^1.3.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
