--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "react-native-gesture-handler": "^2.3.0",
     "react-native-get-random-values": "^1.4.0",
     "react-native-google-fit": "^0.18.2",
+    "react-native-health": "^1.10.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
-    "react-native-permissions": "^2.0.9",
+    "react-native-permissions": "^3.3.0",
     "react-native-progress": "^5.0.0",
     "react-native-qrcode-scanner": "^1.3.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.1",
-    "react-native-vector-icons": "^9.0.0",
-    "rn-apple-healthkit": "^0.8.0"
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
