--- a/.azuredevops/main.yml
+++ b/.azuredevops/main.yml
@@ -12,53 +12,131 @@ variables:
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 jobs:
-  # - job: Android_Develop
-  #   condition: and(succeeded(), eq(variables.isMaster, false))
-  #   steps:
-  #     - task: NodeTool@0
-  #       inputs:
-  #         versionSpec: '12.18.4'
-  #       displayName: 'Install Node'
-
-  #     - script: npm install
-  #       workingDirectory: .
-  #       displayName: 'Install node dependencies'
-
-  #     - script: npm version prerelease --preid "$(Build.BuildNumber)" --no-git-tag-version
-  #       workingDirectory: .
-  #       displayName: 'Increment version in package.json'
-
-  #     - task: Gradle@2
-  #       inputs:
-  #         workingDirectory: 'android'
-  #         gradleWrapperFile: 'android/gradlew'
-  #         gradleOptions: '-Xmx3072m'
-  #         publishJUnitResults: false
-  #         testResultsFiles: '**/TEST-*.xml'
-  #         tasks: 'assembleDebug'
-
-  #     - task: PublishBuildArtifacts@1
-  #       displayName: 'Publish Build Artifact'
-  #       inputs:
-  #         PathtoPublish: 'android/app/build/outputs/apk/debug/$(Project_Name)-debug.apk'
-  #         ArtifactName: 'android'
-  #         publishLocation: 'Container'
-
-  - job: Android_Release
+  - job: Setup
     steps:
       - task: NodeTool@0
         inputs:
-          versionSpec: '12.18.4'
-        displayName: 'Install Node'
+          versionSpec: "12.18.4"
+        displayName: "Install Node"
 
       - script: npm install
         workingDirectory: .
-        displayName: 'Install node dependencies'
+        displayName: "Install node dependencies"
 
       - script: npm version prerelease --preid "$(Build.BuildNumber)" --no-git-tag-version
         workingDirectory: .
-        displayName: 'Increment version in package.json'
+        displayName: "Increment version in package.json"
 
+      - task: ShellScript@2
+        inputs:
+          scriptPath: "$(rootPath)/bumpVersion.sh"
+      - bash: |
+        echo "##vso[task.setvariable variable=AgentName;]$(Agent.Name)"
+
+  - job: iOS_Release
+    timeoutInMinutes: 120
+    pool:
+      demands:
+        - Agent.Name -equals $(Agent.Name)
+    # condition: and(succeeded(), eq(variables.isMaster, true))
+    variables:
+      rootPath: "$(System.DefaultWorkingDirectory)"
+      archivePath: "$(rootPath)/output/archive"
+      xcodeDeveloperDir: "/Applications/Xcode_$(Xcode_Version).app/Contents/Developer"
+      xcarchivePath: "$(archivePath)/$(Project_Name).xcarchive"
+      zipToSign: "$(archivePath)/$(Project_Name).zip"
+      signedZip: "$(archivePath)/$(Project_Name).zip"
+      signedExtractedPath: "$(exportPath)/signed"
+
+    steps:
+      - task: DownloadSecureFile@1
+        displayName: "Download distribution profile from Azure secure files storage"
+        inputs:
+          secureFile: "CPM_Dogfood.mobileprovision"
+          retryCount: 5
+
+      - task: CopyFiles@2
+        displayName: "Copy distribution provisioning profile"
+        inputs:
+          SourceFolder: "$(Agent.TempDirectory)"
+          Contents: "CPM_Dogfood.mobileprovision"
+          TargetFolder: "$(archivePath)"
+          flattenFolders: true
+
+      - task: CopyFiles@2
+        displayName: "Copy ExportOptions"
+        inputs:
+          SourceFolder: "$(rootPath)"
+          Contents: "ExportOptions.plist"
+          TargetFolder: "$(archivePath)"
+          flattenFolders: true
+      
+      - task: Xcode@5
+        displayName: "Build Mobile Application"
+        inputs:
+          actions: "build archive"
+          configuration: "Release"
+          xcWorkspacePath: "$(rootPath)/ios/$(Project_Name).xcworkspace"
+          scheme: "$(Project_Name)"
+          sdk: "iphoneos15.0"
+          useXcpretty: false
+          archivePath: "$(xcarchivePath)"
+          args: "-archivePath $(xcarchivePath)"
+          xcodeVersion: "default"
+
+      - task: PublishBuildArtifacts@1
+        displayName: "Publish Archive"
+        inputs:
+          PathtoPublish: "$(archivePath)"
+          ArtifactName: "archive"
+          publishLocation: "Container"
+
+      - task: ArchiveFiles@2
+        displayName: "Create zip for signing"
+        inputs:
+          rootFolderOrFile: "$(archivePath)"
+          includeRootFolder: false
+          archiveFile: "$(zipToSign)"
+
+      - task: EsrpCodeSigning@1
+        displayName: "Sign build"
+        inputs:
+          ConnectedServiceName: "IoT PnP PaaD"
+          FolderPath: "$(archivePath)"
+          Pattern: "*.zip"
+          signConfigType: "inlineSignParams"
+          inlineOperation: |
+            [
+                  {
+                      "KeyCode" : "CP-464234-Apple",
+                      "OperationCode" : "iOSAppSignVnext",
+                      "Parameters" : {},
+                      "ToolName" : "sign",
+                      "ToolVersion" : "1.0"
+                  }
+            ]
+          SessionTimeout: "60"
+          MaxConcurrency: "50"
+          MaxRetryAttempts: "5"
+
+      - task: ExtractFiles@1
+        displayName: "Extract signed build"
+        inputs:
+          archiveFilePatterns: "$(signedZip)"
+          destinationFolder: "$(signedExtractedPath)"
+
+      - task: PublishBuildArtifacts@1
+        displayName: "Publish Signed Ipa"
+        inputs:
+          PathtoPublish: "$(signedExtractedPath)"
+          ArtifactName: "ios_signed"
+          publishLocation: "Container"
+
+  - job: Android_Release
+    pool:
+      demands:
+        - Agent.Name -equals $(Agent.Name)
+    steps:
       - task: DownloadSecureFile@1
         name: androidKeystore
         inputs:
