--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '11.0'
 
 permissions_path = '../node_modules/react-native-permissions/ios'
-pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
+pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
 pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
 
 target 'cpm' do
