--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,5 +30,13 @@ target 'cpm' do
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    # Error when archiving. Workaround.
+    # Opened issue: https://github.com/facebook/react-native/issues/30335
+    installer.pods_project.targets.each do |target|
+      if target.name == "React-Core.common-AccessibilityResources"
+       target.remove_from_project
+      end
+    end
+    # End of workaround
   end
 end
