revert vnext sign

--- a/.azuredevops/main.yml
+++ b/.azuredevops/main.yml
@@ -94,7 +94,7 @@ jobs:
             [
                   {
                       "KeyCode" : "CP-464234-Apple",
-                      "OperationCode" : "iOSAppSign",
+                      "OperationCode" : "iOSAppSignVnext",
                       "Parameters" : {},
                       "ToolName" : "sign",
                       "ToolVersion" : "1.0"
