--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/material-bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "buffer": "^5.6.0",
     "events": "^3.2.0",
     "react": "^17.0.2",
@@ -38,8 +38,8 @@
     "react-native-progress": "^5.0.0",
     "react-native-qrcode-scanner": "^1.3.1",
     "react-native-reanimated": "^2.3.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^2.18.1",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0"
   },
